fix: dark mode leaking through on landing page

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,9 @@
 @theme {
   --color-*: initial;
 
+  --color-white: white;
+  --color-black: black;
+
   --color-gray-50: #fafaf9;
   --color-gray-100: #f5f5f4;
   --color-gray-200: #e7e5e4;
